trunk/Archive2/0b/1989011fd9a274/output
main.cpp:8:28: error: expected expression
    std::cout << v.size(); << std::endl;
                           ^
1 error generated.
